Make the palette change darker every hover

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <link rel="stylesheet" href="EaSketch.css">
     </head>
     <body>
+        <div style="height: 20px"></div>
         <div class='grid'></div>
         <script src="EaSketch.js"></script>
     </body>
